# datasim

./: CMakeCache.txt  CMakeLists copy.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  cmake_install.cmake  docker-compose.yml  dockerfile  dockerfile_sensor1  dockerfile_sensor2  dockerfile_sensor3  dockerfile_sensor4  dockerfile_sensor5  main.cpp  old.cpp  run.sh  run_sensor1.sh  run_sensor2.sh  run_sensor3.sh  run_sensor4.sh  run_sensor5.sh
app/: CMakeLists.txt  main.cpp
cmake/: Makefile  PahoMqttCppConfig.cmake  PahoMqttCppTargets.cmake  cmake_install.cmake
docker-compose/: docker-compose.yml  docker-compose.yml.old  docker-compose.yml.old2
docker-compose/config/: mosquitto.conf
old/: CMakeLists.txt  README.md
old/app/: main.cpp
old/database/: docker-compose.yml  schema.sql
old/src/: CMakeLists.txt  datasim.cpp
src/: CMakeLists.txt  Makefile  cmake_install.cmake  datasim.h  numbergen.cpp
src/app/: cmake_install.cmake  main.cpp  sensors.cpp  thrusters.cpp
src/datasim/: CMakeLists.txt  Makefile  cmake_install.cmake  numbergen.h
src/mqtt/: Makefile  cmake_install.cmake
src/nlohmann/: CMakeLists.txt
src/samples/: CMakeLists.txt
src/sensors/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
src/thrusters/: Makefile  main.cpp
